# IDUS

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
brain/: llm.py  reflection.py
memory/: store.py
scripts/: audio_smoke_test.py  automation_test.py  confirmation_test.py  enroll_speaker.py  jarvis_loop.py  llm_test.py  memory_test.py  package_tracking_test.py  quickwins_test.py  reflection_test.py  reminders_test.py  silero_en_voices.py  speaker_id_test.py  stt_test.py  telegram_loop.py  tts_test.py  vad_test.py  voice_shootout.py  wakeword_test.py  wolt_session_setup.py
tools/: automation.py  calculator.py  food_ordering.py  memory_tools.py  messaging.py  notes.py  reminders.py  shopping_list.py  time_tools.py  timer.py  web_search.py
voice/: speaker_id.py  stt.py  tts.py  vad.py  wakeword.py
